--- a/scss/general/__general.scss
+++ b/scss/general/__general.scss
@@ -22,15 +22,21 @@
     align-items: center;
 }
 
-input:active{
+
+.entrada input:hover {
     border-color: red;
-    
+    border-width: 5px;
+    &:active {
+        border-color: red;
+    }
 }
 
-input:hover{
-    transform: scale(1.03);
-}
-
-.boton:hover{
+.boton:hover {
     background-color: red;
+}
+
+.pie {
+    font-size: 1.5rem;
+    color: red;
+    text-align: end;
 }
